mdapipkg/unpackaged/objects/Odoo_Endpoint_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                    <default>true</default>
                    <label>Sandbox</label>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Odoo Endpoint Config</label>
    <pluralLabel>Odoo Endpoint Configs</pluralLabel>
</CustomObject>